<resources>
    <string name="app_name">IntelliHome</string>
    <string name="default_web_client_id" translatable="false">217556004383-7vb798p75uig7mhpc26nrlq0n20ckkr7.apps.googleusercontent.com</string>
    <string name="logodeintellihome">logodeintellihome</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="terms_and_conditions">Términos y Condiciones de Uso\n\nAceptación de los Términos\nAl utilizar nuestra aplicación y los servicios proporcionados por Smart Home Solutions, usted acepta los presentes Términos y Condiciones. Si no está de acuerdo con cualquiera de estos términos, no debe utilizar la aplicación.\n\nVeracidad de la Información\nAl registrarse y utilizar nuestros servicios, usted se compromete a proporcionar información veraz, completa y actualizada en todo momento. Cualquier falsedad o inexactitud en la información proporcionada es de exclusiva responsabilidad del usuario, y Smart Home Solutions se reserva el derecho de tomar medidas apropiadas, incluidas, pero no limitadas a, la suspensión o cancelación de la cuenta de usuario.\n\nRestricciones de Edad\nEl uso de los servicios de Smart Home Solutions está restringido a usuarios mayores de 18 años. Al crear una cuenta, usted confirma que cumple con este requisito de edad. En caso de que se descubra que un usuario menor de 18 años ha proporcionado información falsa para acceder a nuestros servicios, la cuenta será cancelada de inmediato, y cualquier contrato o acuerdo derivado de dicho uso será nulo.\n\nResponsabilidad del Usuario\nSmart Home Solutions no se hace responsable de la verificación de la veracidad de los datos proporcionados por los usuarios. Los usuarios son los únicos responsables de la información que proporcionan y de las consecuencias legales derivadas de cualquier falsedad. Cualquier mal uso del servicio por parte de un usuario que proporcione información incorrecta puede derivar en la suspensión de su cuenta o en acciones legales, según lo considere oportuno la empresa.\n\nExclusión de Responsabilidad\nSmart Home Solutions no será responsable por ninguna pérdida, daño o perjuicio causado como resultado de la falsificación de datos o información incorrecta proporcionada por los usuarios. La empresa no garantiza la veracidad de la información proporcionada por otros usuarios ni la idoneidad de los inmuebles alquilados o arrendados a través de la aplicación.\n\nPolítica de Privacidad\nAl utilizar nuestros servicios, usted acepta la recopilación, uso y almacenamiento de sus datos personales conforme a nuestra Política de Privacidad. Smart Home Solutions se compromete a proteger su información personal y a utilizarla únicamente para los fines establecidos en dicha política. Esto incluye, pero no se limita a, el uso de su información para mejorar nuestros servicios, comunicarnos con usted y cumplir con nuestras obligaciones legales. La recopilación de datos puede incluir información personal como nombre, dirección de correo electrónico, número de teléfono y datos de ubicación. Usted tiene derecho a acceder, corregir o eliminar su información personal, conforme a la legislación aplicable.\n\nModificaciones de los Términos y Condiciones\nSmart Home Solutions se reserva el derecho de modificar estos Términos y Condiciones en cualquier momento. Es responsabilidad del usuario revisar los términos periódicamente. El uso continuado de la aplicación después de la publicación de los cambios implicará la aceptación de los mismos.</string>
    <string name="Personalizar">Personalización</string>
    <string name="Idioma">Idioma</string>
    <string name="paleta0">paleta0</string>
    <string name="paleta1">paleta1</string>
    <string name="paleta2">paleta2</string>
    <string name="paleta3">paleta3</string>
    <string name="paleta4">paleta4</string>
    <string name="Español">Español</string>
    <string name="Busqueda_del_Home_Page">Busqueda</string>
    <string name="Inglés">Inglés</string>
    <string name="botonRegresar">botonRegresar</string>
</resources>